--- a/public/notes.html
+++ b/public/notes.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
-  <!-- Added a dot to href to ensure correct path-->
-  <link rel="stylesheet" href="./assets/css/styles.css"/> 
+  <link rel="stylesheet" href="/assets/css/styles.css"/> 
 </head>
 
 <body>
@@ -34,8 +33,7 @@
       </div>
     </div>
   </div>
-  <!-- added dot -->
-  <script src="./assets/js/index.js"></script>
+  <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
